--- a/Amelia_Angular/src/app/app.component.css
+++ b/Amelia_Angular/src/app/app.component.css
@@ -1,12 +1,34 @@
+
 .example-spacer {
     flex: 1 1 auto;
 }
 
-button {
+.box-button-menu {
     border: none;
     background-color: transparent;
+    display: flex;
+    align-items: center;
+    gap: 10px;
 }
 
 button:hover {
     cursor: pointer;
+}
+
+.example-container {
+  width: 100%;
+  height: 90%;
+  box-sizing: border-box;
+}
+
+.example-sidenav-content {
+  display: flex;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+}
+
+.example-sidenav {
+  padding: 10px;
+  width: 150px;
 }
