adjusting the buttons in app component

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -32,3 +32,11 @@ button:hover {
   padding: 10px;
   width: 150px;
 }
+
+.sidenav-btt {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  border: none;
+  background-color: transparent;
+}
