--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,20 +12,20 @@
     <div class="drawer-area">
     <mat-list>
       <mat-list-item>
-        <button mat-icon-button>
+        <button class="sidenav-btt">
           <mat-icon>home</mat-icon>
           Home
         </button>
       </mat-list-item>
       <mat-list-item>
-        <button mat-icon-button>
-          <mat-icon (click)="drawer.toggle();">person</mat-icon>
+        <button class="sidenav-btt">
+          <mat-icon>person</mat-icon>
           Clientes
         </button>
       </mat-list-item>
       <mat-list-item>
-        <button mat-icon-button>
-          <mat-icon (click)="drawer.toggle();">sell</mat-icon>
+        <button class="sidenav-btt">
+          <mat-icon>sell</mat-icon>
           Produtos
         </button>
       </mat-list-item>
