--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,3 @@
-.toolbar-height{
-}
-
 .example-spacer {
     flex: 1 1 auto;
 }
@@ -48,6 +45,12 @@ button:hover {
 
 .LinkActive{
   background-color: rgb(96, 131, 197);
+}
+
+.router-outlet{
+  width: 100%;
+  height: 100%;
+  padding: 10px 0px 0px 10px;
 }
 
 
