adding angular material mat-tab-group (tabs) for client and product component

--- a/src/app/pages/client/client.component.html
+++ b/src/app/pages/client/client.component.html
@@ -1,1 +1,27 @@
-<p>client works!</p>
+<mat-tab-group class="teste" animationDuration="400ms" mat-align-tabs="center">
+    <mat-tab>
+      <ng-template mat-tab-label>
+        <mat-icon class="example-tab-icon">person_add</mat-icon>
+        Adicionar cliente
+      </ng-template>
+      Content 1
+    </mat-tab>
+  
+    <mat-tab>
+      <ng-template mat-tab-label>
+        <mat-icon class="example-tab-icon">list</mat-icon>
+        Lista
+      </ng-template>
+      Content 2
+    </mat-tab>
+  
+    <mat-tab>
+      <ng-template mat-tab-label>
+        <mat-icon class="example-tab-icon">delete</mat-icon>
+        Excluir
+      </ng-template>
+  
+      Content 3
+    </mat-tab>
+  </mat-tab-group>
+  
