the mat-ink-bar solution was implemented in product component

--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -1,4 +1,4 @@
-<mat-tab-group class="teste" animationDuration="400ms" mat-align-tabs="center">
+<mat-tab-group #MatTabGroup class="teste" animationDuration="400ms" mat-align-tabs="center">
     <mat-tab>
       <ng-template mat-tab-label>
         <mat-icon class="example-tab-icon">add_box</mat-icon>
