--- a/src/app/pages/client/client.component.html
+++ b/src/app/pages/client/client.component.html
@@ -12,7 +12,7 @@
             <mat-icon class="example-tab-icon">list</mat-icon>
             Lista
           </ng-template>
-          Content 2
+          <app-list-customer></app-list-customer>
         </mat-tab>
       
         <mat-tab>
