spinner, filter data and form for table of customer is done

--- a/src/app/feature/customer/components/lists/list-address/list-address.component.html
+++ b/src/app/feature/customer/components/lists/list-address/list-address.component.html
@@ -1,4 +1,4 @@
-<mat-list [disabled]="true" class="list">
+<mat-list [disabled]="listBlocked" class="list">
     <mat-list-item class="item" *ngFor="let address of addresses">
         <list-address-item [address]="address" (removeEvent)="addressRemoved($event)" />
     </mat-list-item>
