--- a/src/app/feature/customer/components/tables/table-customer/table-customer.component.css
+++ b/src/app/feature/customer/components/tables/table-customer/table-customer.component.css
@@ -1,6 +1,8 @@
-.demo-table {
-    width: 70%;
-  }
+:host{
+  width: 70%;
+  height: 70%;
+  overflow-y: auto;
+}
   
   .mat-mdc-row .mat-mdc-cell {
     border-bottom: 1px solid transparent;
@@ -16,3 +18,10 @@
     font-weight: bold;
   }
   
+  .box-spinner{
+    display: flex;
+    background-color: rgba(0, 0, 0, 0.15);
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+  }
