--- a/src/app/feature/customer/components/lists/list-address/list-address.component.css
+++ b/src/app/feature/customer/components/lists/list-address/list-address.component.css
@@ -1,14 +1,15 @@
 :host {
-    height: 75%;
-    width: 100%;
     background-color: aliceblue;
+    overflow-y: auto;
 }
 
-.list{
+::ng-deep .mdc-list{
+    padding-top: 15px;
     width: 100%;
     height: 100%;
 }
 
 .item{
-    height: 40%;
+    height: auto;
+    margin-bottom: 15px;
 }
