--- a/src/app/feature/customer/screens/details/details.component.css
+++ b/src/app/feature/customer/screens/details/details.component.css
@@ -6,25 +6,76 @@
     align-items: center;
     background-color: burlywood;
     padding: 30px;
+    gap: 20px 0px;
 }
 
-.container-address{
+.container-customer{
     width: 60%;
-    height: 60%;
+    height: 20%;
     max-width: 1000px;
+    display: flex;
+    flex-direction: column;
+    background-color: aquamarine;
+    padding: 10px;
+    justify-content: space-around;
+}
+
+.id-name{
+    display: flex;
+    align-self: center;
+    gap: 0px 20px;
+}
+
+.title-name{
+    text-align: center;
+}
+
+.form-customer{
+    width: 100%;
+    height: auto;
+}
+
+.div-buttons{
+    display: flex;
+    gap: 0px 10px;
+    justify-content: end;
+}
+
+.stepper{
+    height: 80%;
+    width: 80%;
+    max-width: 1000px;
+    padding-bottom: 20px;
+}
+
+.box-address, .box-sub-customers{
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     gap: 10px 0px;
 }
 
-.list{
-    width: 100%;
-    height: 100%;
-    background-color: aquamarine;
-    overflow-y: auto;
+.btt-add-address{
+    align-self: flex-end;
+    margin-right: 20px;
+    height: 40px;
+    width: 100px;
 }
 
-.list-item{
-    width: 100%;
-    height: 40%;
+.list-address{
+    flex: 1;
 }
+
+.form-address{
+    padding: 15px;
+}
+
+::ng-deep .mat-horizontal-stepper-header-container{
+    width: 30%;
+    min-width: 315px;
+}
+
+
+
+
