--- a/src/app/feature/customer/components/trees/sub-customers/sub-customers.component.css
+++ b/src/app/feature/customer/components/trees/sub-customers/sub-customers.component.css
@@ -10,11 +10,12 @@
 
 
 .form-customer{
+    width: 50%;
+    max-width: 800px;
     height: auto;
 }
 
 .list{
-    flex: 1;
     width: 50%;
     max-width: 800px;
     background-color: aqua;
