feature of order is working with barcode reader

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,6 +29,12 @@
           <a>Produto</a>
         </button>
       </mat-list-item>
+      <mat-list-item>
+        <button [routerLink]="['/order']" routerLinkActive="LinkActive" class="sidenav-btt">
+          <mat-icon>border_all</mat-icon>
+          <a>Pedido</a>
+        </button>
+      </mat-list-item>
      </mat-list>
     </div>
   </mat-drawer>
