--- a/src/app/feature/product/components/dialogs/add-mat-option-brand/dialog-overview-add-option.html
+++ b/src/app/feature/product/components/dialogs/add-mat-option-brand/dialog-overview-add-option.html
@@ -1,8 +1,8 @@
-<h1 mat-dialog-title>Adicionar tipo de produto</h1>
+<h1 mat-dialog-title>Adicionar marca</h1>
 <div mat-dialog-content>
     <mat-form-field>
         <input type="text" matInput [(ngModel)]="data" placeholder="nome do tipo de produto"/>
-        <mat-hint>Nome</mat-hint>
+        <mat-hint>Marca</mat-hint>
     </mat-form-field>
 </div>
 <mat-dialog-actions align="end">
