--- a/src/app/feature/product/components/forms/form-product/form-product.component.html
+++ b/src/app/feature/product/components/forms/form-product/form-product.component.html
@@ -1,13 +1,16 @@
 <form (ngSubmit)="onSubmit()" [formGroup]="ProductForm" #formDir="ngForm" class="form-product">   
 
-    <mat-chip-listbox aria-label="Fish selection" (change)="chipChange($event)" formControlName="productType">
+    <mat-chip-listbox aria-label="Fish selection" formControlName="productType">
         <mat-chip-option *ngFor="let product of productTypes" [value]="product"
           [removable]="chipRemovable" (removed)="removeChip(product)">
           {{product.name}}
           <mat-icon *ngIf="chipRemovable" matChipRemove>cancel</mat-icon>
         </mat-chip-option>
 
-        <btt-add-chip (messageEvent)="addNewChip($event)"/>
+        <button mat-mini-fab color="accent" aria-label="Example icon button with a plus one icon"
+        class="btt-chip-add" (click)="addChip()">
+          <mat-icon>add</mat-icon>
+        </button>
 
         <button mat-mini-fab color="warn" aria-label="Example icon button with a filter list icon"
           class="btt-chip-add">
@@ -16,7 +19,7 @@
 
         <button mat-mini-fab color="warn" aria-label="Example icon button with a filter list icon"
           (click)="chipRemovable = !chipRemovable"  class="btt-chip-add">
-          <mat-icon>delete</mat-icon>
+          <mat-icon>{{chipRemovable? 'cancel' : 'delete'}}</mat-icon>
         </button>
     </mat-chip-listbox>
 
@@ -55,6 +58,12 @@
       <mat-form-field appearance="fill" class="input-brand">
         <mat-label>Marca</mat-label>
         <mat-select formControlName="brand">
+
+          <mat-option (click)="openDialogAddBrand()">
+            Adicionar
+            <mat-icon>add</mat-icon>
+          </mat-option>
+
           <mat-option *ngFor="let brand of brands" [value]="brand">
             {{brand.name}}
           </mat-option>
@@ -73,4 +82,5 @@
       </mat-form-field>   
           
       <button mat-raised-button type="submit">Salvar</button>
+
 </form>
