--- a/src/app/feature/customer/screens/list/list.component.html
+++ b/src/app/feature/customer/screens/list/list.component.html
@@ -1,2 +1,1 @@
-<form-table></form-table>
-<table-customer></table-customer>
+<table-customer [customers]="customers" (rowClicked)="clickAtRow($event)" />
