--- a/src/app/feature/order/components/order-section/order-section.component.css
+++ b/src/app/feature/order/components/order-section/order-section.component.css
@@ -1,4 +1,30 @@
 :host {
     display: flex;
     background-color: rgb(86, 158, 134);
+    display: flex;
+    padding: 10px 10px 10px 20px;
+    gap: 0px 20px;
+}
+
+.container{
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+
+.top{
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+}
+
+.actions{
+    display: flex;
+    gap: 0px 20px;
+}
+
+.body{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
 }
